# pingspace

./: Cargo.toml  README.md
crates/pingspace/: Cargo.toml
crates/pingspace-tui/: Cargo.toml
crates/pingspace-tui/src/: main.rs  tui.rs
crates/pingspace/src/: context.rs  lib.rs
crates/pingspace/src/agent/: events.rs  mod.rs
crates/pingspace/src/provider/: anthropic.rs  mock.rs  mod.rs
crates/pingspace/src/tools/: bash.rs  edit.rs  write.rs
crates/pingspace/tests/: agent.rs  tools.rs  types.rs
src/: context.rs  lib.rs  main.rs  tui.rs  types.rs
src/llm/: mod.rs
src/provider/: mock.rs
src/tools/: mod.rs  read.rs
tests/: agent.rs  tools.rs  types.rs
