[package]
name = "pingspace-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pingspace"
path = "src/main.rs"

[dependencies]
pingspace = { path = "../pingspace" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"

# Error handling
anyhow = "1"

# Serialization (for tool args display)
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
